#166: refactored to java 8 code style